Exports to CSV and HTML

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -25,6 +25,30 @@
     support as time allows.
 </p>
 <br />
+<h3>Free? Really free?</h3>
+<p>
+    <i>Why is SailScores free? What's the catch? What about "If you're not paying for the product, you are the product."?</i>
+</p>
+<p>
+    As of late 2019, the expense to host this site is less than $20 a month. The
+    development time is a more significant contribution, but it is happily donated:
+    score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
+</p>
+<p>
+    If there is a catch, it might be this: as we build more advanced features, or as the site becomes
+    popular, it may not fit into the current inexpensive hosting option. We might need to come up with
+    payments for a better server option. That could be done with an option to pay for premium features
+    or a SailScores client app might require purchase.
+</p>
+<p>
+    But we remain committed to providing a free or very low cost option. The sailing clubs we've participated
+    in haven't had large budgets and would have benefitted from SailScores.
+</p>
+<p>
+    By the way, SailScores doesn't use any tracking or cookies except the minimum required to track logged-in users. Your
+    data is not being sold by SailScores.
+</p>
+<br />
 <h3>Future</h3>
 We're working on new features, including:
 <ul>
