--- a/SailScores.Web/Views/Regatta/Edit.cshtml
+++ b/SailScores.Web/Views/Regatta/Edit.cshtml
@@ -14,8 +14,17 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        <p>
+            Regattas are sailing events held over a few days, unlike
+            <a asp-controller="Series" asp-action="Create">series</a> which have recurring races. They will be shared on the front page of SailScores for a week before and
+            after their scheduled dates.
+        </p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4">
         <form asp-action="Edit"
-          asp-route-returnurl="@ViewData["ReturnUrl"]" >
+              asp-route-returnurl="@ViewData["ReturnUrl"]">
             <input type="hidden" id="clubId" asp-for="ClubId" />
             <input type="hidden" id="Id" asp-for="Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
