Various Competitor Merge bug fixes

--- a/SailScores.Web/Views/Admin/_BoatClassList.cshtml
+++ b/SailScores.Web/Views/Admin/_BoatClassList.cshtml
@@ -14,7 +14,9 @@
                 Class refers to the type of boat. A competitor can only belong to one class.
             </p>
             <p>
-                @Html.ActionLink("Create", "Create", "BoatClass", new { /* id=item.PrimaryKey */ })
+                <a class="btn btn-primary" asp-action="Create" asp-controller="BoatClass">
+                    Create
+                </a>
             </p>
             <table class="table table-not-wide">
                 <tbody>
