--- a/SailScores.Web/Views/Admin/_FleetList.cshtml
+++ b/SailScores.Web/Views/Admin/_FleetList.cshtml
@@ -15,7 +15,9 @@
                     multiple fleets.
                 </p>
                 <p>
-                    @Html.ActionLink("Create", "Create", "Fleet", new { /* id=item.PrimaryKey */ })
+                    <a class="btn btn-primary" asp-action="Create" asp-controller="Fleet">
+                        Create
+                    </a>
                 </p>
                 <table class="table table-not-wide">
                     <tbody>
