--- a/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
+++ b/SailScores.Web/Views/Admin/_ScoringSystems.cshtml
@@ -13,7 +13,9 @@
     <div id="collapseScoring" class="collapse" aria-labelledby="scoringHeading" data-parent="#accordion">
         <div class="card-body">
             <p>
-                 @Html.ActionLink("Create", "Create", "ScoringSystem")
+                <a class="btn btn-primary" asp-action="Create" asp-controller="ScoringSystem">
+                    Create
+                </a>
             </p>
             <table class="table table-not-wide">
                 <tbody>
