--- a/SailScores.Web/Views/MergeCompetitor/SelectSource.cshtml
+++ b/SailScores.Web/Views/MergeCompetitor/SelectSource.cshtml
@@ -33,16 +33,16 @@
                     <option selected="selected">Select a racer...</option>
                     @foreach (var comp in Model.SourceCompetitorOptions)
                     {
-                        <option value="@comp.Id">
-                            @comp.Name - @comp.SailNumber
-                        </option>
+                <option value="@comp.Id">
+                    @comp.Name - @comp.SailNumber @(comp.BoatClass != null ? $"( {comp.BoatClass.Name} )" : "")
+                </option>
                     }
                 </select>
                 <span asp-validation-for="SourceCompetitorId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Merge" class="btn btn-primary my-2" />
+                <input type="submit" value="Confirm Merge" class="btn btn-primary my-2" />
                 <a asp-controller="Admin"
                    asp-action="Index"
                    class="btn btn-outline-primary">Cancel</a>
